crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO numrange_test2 VALUES('empty');"
---
InsertStmt@0..43
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "numrange_test2"
  Whitespace@26..27 " "
  SelectStmt@27..41
    Values@27..33 "VALUES"
    Ascii40@33..34 "("
    List@34..41
      AConst@34..41
        Sconst@34..41 "'empty'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

