crates/pg_syntax/tests/snapshots/postgres_regress/regex@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'abc abc abc' ~ '^(.+)( \\1)+$' as t;"
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..42
    AExpr@7..37
      AConst@7..20
        Sconst@7..20 "'abc abc abc'"
      Whitespace@20..21 " "
      Op@21..22 "~"
      Whitespace@22..23 " "
      AConst@23..37
        Sconst@23..37 "'^(.+)( \\1)+$'"
    Whitespace@37..38 " "
    As@38..40 "as"
    Whitespace@40..41 " "
    Ident@41..42 "t"
  Ascii59@42..43 ";"

