crates/pg_syntax/tests/snapshots/postgres_regress/regex@102.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_match('foo', '(?:.|){99}');"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..19 "regexp_match"
      Ascii40@19..20 "("
      AConst@20..25
        Sconst@20..25 "'foo'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..39
        Sconst@27..39 "'(?:.|){99}'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

