crates/pg_syntax/tests/snapshots/postgres_regress/regex@105.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'a' ~ '\\x7fffffff';"
---
SelectStmt@0..26
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..25
    AExpr@7..25
      AConst@7..10
        Sconst@7..10 "'a'"
      Whitespace@10..11 " "
      Op@11..12 "~"
      Whitespace@12..13 " "
      AConst@13..25
        Sconst@13..25 "'\\x7fffffff'"
  Ascii59@25..26 ";"

