crates/pg_syntax/tests/snapshots/postgres_regress/regex@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_match('abc', 'bc');"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..19 "regexp_match"
      Ascii40@19..20 "("
      AConst@20..25
        Sconst@20..25 "'abc'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..31
        Sconst@27..31 "'bc'"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

