crates/pg_syntax/tests/snapshots/postgres_regress/regex@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_match('abc', '(B)(c)', 'i');"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..19 "regexp_match"
      Ascii40@19..20 "("
      AConst@20..25
        Sconst@20..25 "'abc'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..35
        Sconst@27..35 "'(B)(c)'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..40
        Sconst@37..40 "'i'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

