crates/pg_syntax/tests/snapshots/postgres_regress/regex@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_match('abc', 'Bd', 'ig');"
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..19 "regexp_match"
      Ascii40@19..20 "("
      AConst@20..25
        Sconst@20..25 "'abc'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..31
        Sconst@27..31 "'Bd'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..37
        Sconst@33..37 "'ig'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

